{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 46,
  "lineage": "b54b4742-9e11-3d10-7603-e5679d442ba6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/networkInterfaces/tf-nic",
            "internal_domain_name_suffix": "yytbwkcaxl2elpzczduequpepg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "100.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/publicIPAddresses/ip-01",
                "subnet_id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee/subnets/azure-tf-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AF-BA-0C",
            "name": "tf-nic",
            "private_ip_address": "100.0.1.4",
            "private_ip_addresses": [
              "100.0.1.4"
            ],
            "resource_group_name": "new-rg-roee",
            "tags": {
              "Terraform": "True",
              "env": "Dev"
            },
            "virtual_machine_id": "/subscriptions/SubscriptionID/resourceGroups/NEW-RG-ROEE/providers/Microsoft.Compute/virtualMachines/linuxvm-01"
          },
          "dependencies": [
            "azurerm_public_ip.tf-ip",
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sc-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/networkSecurityGroups/tf-sc-group",
            "location": "westeurope",
            "name": "tf-sc-group",
            "resource_group_name": "new-rg-roee",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "87.71.197.26",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Terraform": "True",
              "env": "Dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/networkSecurityGroups/tf-sc-group/securityRules/dev-rule",
            "name": "dev-rule",
            "network_security_group_name": "tf-sc-group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "new-rg-roee",
            "source_address_prefix": "87.71.197.26",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sc-group",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tf-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/publicIPAddresses/ip-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.137.6.126",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "ip-01",
            "resource_group_name": "new-rg-roee",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Terraform": "True",
              "env": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee/subnets/azure-tf-subnet",
            "name": "azure-tf-subnet",
            "resource_group_name": "new-rg-roee",
            "virtual_network_name": "new-Vnet-roee"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee/subnets/azure-tf-subnet",
            "network_security_group_id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/networkSecurityGroups/tf-sc-group",
            "subnet_id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee/subnets/azure-tf-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.sc-group",
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "100.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "281b26c6-ba40-45f8-bf22-c8e84851e47e",
            "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee",
            "location": "westeurope",
            "name": "new-Vnet-roee",
            "resource_group_name": "new-rg-roee",
            "subnet": [
              {
                "address_prefix": "100.0.1.0/24",
                "id": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/virtualNetworks/new-Vnet-roee/subnets/azure-tf-subnet",
                "name": "azure-tf-subnet",
                "security_group": "/subscriptions/SubscriptionID/resourceGroups/new-rg-roee/providers/Microsoft.Network/networkSecurityGroups/tf-sc-group"
              }
            ],
            "tags": {
              "Terraform": "True",
              "env": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}